:lipstick: fix overflow-y scroll for formula

--- a/src/scss/module/_typography.scss
+++ b/src/scss/module/_typography.scss
@@ -5,7 +5,8 @@ strong {
 p {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: visible;
 }
 
 h1,
